making updates on projects

--- a/index.html
+++ b/index.html
@@ -204,9 +204,10 @@
           <h3><img src="https://img.icons8.com/ios-filled/50/ffffff/jquery.png"/> JQUERY</h3></div>
           <div class=""><div class="demo1" data-percent="80"></div>
           <h3><img src="https://img.icons8.com/cute-clipart/50/ffffff/flask.png"/>Flask &nbsp; &nbsp; &nbsp;&nbsp;</h3></div>
-          <div class="">  <div class="demo" data-percent="90"></div>
-          <h3> <img src="https://img.icons8.com/ios-filled/50/ffffff/github.png"/> GITHUB</h3></div>
-
+          <div class="">
+            <div class="demo4" data-percent="70"></div>
+            <h3><img src="https://img.icons8.com/office/50/000000/react.png"/>React</h3>
+          </div>
         </div>
         <div class="row">
           <div class="">  <div class="demo" data-percent="90"></div>
@@ -217,9 +218,11 @@
             <div class="demo4" data-percent="70"></div>
             <h3 ><img src="https://img.icons8.com/ios-filled/50/ffffff/angularjs.png"/> Angular</h3>
           </div>
+        
           <div class="">  <div class="demo" data-percent="90"></div>
           <h3>  <img src="https://img.icons8.com/ios-filled/50/ffffff/heroku.png"/>Heroku</h3></div>
         </div> 
+
 
 
 
@@ -263,13 +266,57 @@
 <br>
 
 
-
 <section id="projects">
 
 <h3 class="text-center">  <p><i class="fas fa-laptop-code fa-3x"></i></p> projects</h3>
+<br>
 
+<section class="card-section" data-aos="fade-up"
+data-aos-duration="3000">
+    <div class="card ce">
+        <div class="flip-card">
+            <div class="flip-card__container">
+                <div class="card-front">
+                    <div class="card-front__tp card-front__tp--ski">
+                     
+                                   <h2 class="card-front__heading">
+                                       E-commerce website
+                                   </h2>
+                                   <p class="card-front__text-price">
+                                       Created using React and Django
+                                   </p>
+                    </div>
+
+                    <div class="card-front__bt">
+                        <p class="card-front__text-view card-front__text-view--ski">
+                            View me
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card-back">
+                  <img class="video__container" src="https://res.cloudinary.com/dcllyqc40/image/upload/v1633669503/ecommerce_screenshot_s5u1my.png" alt="">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="inside-page">
+            <div class="inside-page__container">
+                <h3 class="inside-page__heading inside-page__heading--ski">
+                    sokomjini
+                </h3>
+                <p class="inside-page__text">
+                This is an E commerce website developed using react for the frontend and django for the back end. It also includes an admin panel you can track the orders payment and delivery status
+                </p>
+                <a href="https://sokomjini.herokuapp.com/" rel="noopener noreferrer" target="_blank" class="inside-page__btn inside-page__btn--ski">view site</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<br>
   <section class="card-area">
-
 
     <!-- Card: Ski -->
     <section class="card-section" data-aos="fade-up"
